--- a/styles.css
+++ b/styles.css
@@ -1,96 +1,109 @@
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
 
 *,
 *::before,
 *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html{
-    font-size: 62.5%;
-    --yellow: #f3b54a;
-    --black: #393b45;
-    --white: #ffffff;
+html {
+  font-size: 62.5%;
+  --yellow: #f3b54a;
+  --black: #393b45;
+  --white: #ffffff;
 }
 
-body{
-    height: 100vh;
-    width: 100vw;
-    font-family: 'Permanent Marker', cursive;
+body {
+  height: 100vh;
+  width: 100vw;
+  font-family: "Permanent Marker", cursive;
 }
 
-main{
-    height: 100%;
-    display: grid;
-    /* grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); */
-    grid-template-columns: 2fr 3fr 2fr;
-    align-items: center;
-    column-gap: 2em;
-    padding: 3em;
+main {
+  height: 100%;
+  display: grid;
+  /* grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); */
+  grid-template-columns: 2fr 3fr 2fr;
+  align-items: center;
+  column-gap: 2em;
+  padding: 3em;
 }
 
-main > *{
-    /* border: 2px solid red; */
+main > * {
+  /* border: 2px solid red; */
 }
 
-.player{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.player {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.player .wrapper{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.player .wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.wrapper p{
-    font-size: 3.2rem;
-    font-weight: 100;
-    color: #6e7889;
+.wrapper p {
+  font-size: 3.2rem;
+  font-weight: 100;
+  color: #6e7889;
 }
 
-svg{
-    color: #393b45;
-    height: 120px;
-    width: 120px;
-
+svg {
+  color: #393b45;
+  height: 120px;
+  width: 120px;
 }
 
 svg path {
-    stroke: #ffffff; 
-    stroke-width: .7px
+  stroke: #ffffff;
+  stroke-width: 0.7px;
 }
 
-.game{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.game {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.gameboard{
-    /* border: 1px solid rebeccapurple; */
-    height: 320px;
-    aspect-ratio: 2/2;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+.gameboard {
+  /* border: 1px solid rebeccapurple; */
+  height: 320px;
+  aspect-ratio: 2/2;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
-
-.gameboard div:nth-child(5){
-    border: 4px solid var(--black);
+.gameboard div:nth-child(5) {
+  border: 4px solid var(--black);
 }
 
-.gameboard div:nth-child(2), div:nth-child(8){
-    border-left: 4px solid var(--black);
-    border-right: 4px solid var(--black);
+.gameboard div:nth-child(2),
+div:nth-child(8) {
+  border-left: 4px solid var(--black);
+  border-right: 4px solid var(--black);
 }
 
-.gameboard div:nth-child(4), div:nth-child(6){
-    border-top: 4px solid var(--black);
-    border-bottom: 4px solid var(--black);
+.gameboard div:nth-child(4),
+div:nth-child(6) {
+  border-top: 4px solid var(--black);
+  border-bottom: 4px solid var(--black);
+}
+
+.cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  aspect-ratio: 2/2;
+}
+
+.active svg,
+.active p {
+  color: #f3b54a;
 }
