--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,6 @@ div:nth-child(6) {
   left: 0;
   right: 0;
   bottom: 0;
-  border: 1px solid red;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -125,9 +124,10 @@ div:nth-child(6) {
 .show{
   opacity: 1;
   z-index: 2;
+  transition: opacity 350ms linear;
 }
 
 .blur{
-  pointer-events: none;
   filter: blur(8px);
+  transition: filter 350ms linear;
 }
